Refactor code to improve readability and remove unused imports and commented out code